syntax = "proto3";

package proto;

option go_package = "github.com/yourusername/agent-platform/proto";

import "proto/common.proto";

// 插件信息
message PluginInfo {
  string name = 1;
  string version = 2;
  string description = 3;
  bool enabled = 4;
}

// 插件配置
message PluginConfig {
  string name = 1;
  map<string, string> config = 2;
}

// 安装插件请求
message InstallPluginRequest {
  string agent_id = 1;
  string plugin_name = 2;
  map<string, string> config = 3;
}

// 安装插件响应
message InstallPluginResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

// 卸载插件请求
message UninstallPluginRequest {
  string agent_id = 1;
  string plugin_name = 2;
}

// 卸载插件响应
message UninstallPluginResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

// 列出插件请求
message ListPluginsRequest {
  string agent_id = 1;
}

// 列出插件响应
message ListPluginsResponse {
  repeated PluginInfo plugins = 1;
}
